deployment/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: dreamai
spec:
  type: ClusterIP
  selector:
    app: portal
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
