deployment/kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal
  namespace: dreamai
  annotations:
    cert-manager.io/cluster-issuer: mobilex.kr
    nginx.ingress.kubernetes.io/proxy-body-size: 200M
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: mobilex.kr
  rules:
    - host: dreamai.kr
      http:
        paths:
          - backend:
              service:
                name: portal
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: www.dreamai.kr
      http:
        paths:
          - backend:
              service:
                name: portal
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dreamai.kr
      secretName: dreamai.kr-cert
    - hosts:
        - www.dreamai.kr
      secretName: www.dreamai.kr-cert
